--- a/src/common/stylus/mixin.styl
+++ b/src/common/stylus/mixin.styl
@@ -1,10 +1,21 @@
-border-1px($color)
+borderb-1px($color)
   position: relative
   &:after
     display: block
     position: absolute
     left: 0
     bottom: 0
+    width: 100%
+    border-top: 1px solid $color
+    content: ' '
+    
+bordert-1px($color)
+  position: relative
+  &:after
+    display: block
+    position: absolute
+    left: 0
+    top: 0
     width: 100%
     border-top: 1px solid $color
     content: ' '
