--- a/src/common/stylus/mixin.styl
+++ b/src/common/stylus/mixin.styl
@@ -1,21 +1,10 @@
-borderb-1px($color)
+border-1px($color)
   position: relative
   &:after
     display: block
     position: absolute
     left: 0
     bottom: 0
-    width: 100%
-    border-top: 1px solid $color
-    content: ' '
-    
-bordert-1px($color)
-  position: relative
-  &:after
-    display: block
-    position: absolute
-    left: 0
-    top: 0
     width: 100%
     border-top: 1px solid $color
     content: ' '
